# Sentinel_Linux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CROSS_REFERENCE_VALIDATION_REPORT.md  GIT_DEPLOYMENT_COMMANDS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
data/baselines/: .gitkeep
data/ioc/: sample_iocs.json
data/rules/sigma/: custom_rules.yml
data/rules/yara/: suspicious_scripts.yar
docs/: API_REFERENCE.md  ARCHITECTURE.md  INSTALLATION.md  THREAT_MODEL.md  USAGE.md
examples/: basic_monitoring.py  custom_alert_handler.py  scheduled_audit.sh  siem_integration.py
scripts/: run_tests.sh
scripts/bash/: cron_auditor.sh  firewall_audit.sh  health_check.sh  install.sh  log_analyzer.sh  network_scanner.sh  permission_checker.sh  process_hunter.sh  run_monitor.sh  service_checker.sh  ssh_hardening_check.sh  system_audit.sh  uninstall.sh  user_audit.sh
scripts/bash/lib/: colors.sh  common.sh
scripts/python/: baseline_creator.py  generate_report.py  ioc_updater.py  run_linters.py  run_monitor.py
src/: __init__.py
src/analyzers/: __init__.py  anomaly_detector.py  ioc_matcher.py  mitre_mapper.py  threat_analyzer.py
src/cli/: __init__.py  dashboard.py  main.py
src/config/: __init__.py  default_config.yaml  logging_config.py  settings.py
src/core/: __init__.py  alert_manager.py  base_monitor.py  event_handler.py  exceptions.py  monitor_manager.py
src/monitors/: __init__.py  auth_monitor.py  file_integrity_monitor.py  log_monitor.py  network_monitor.py  process_monitor.py  service_monitor.py  user_monitor.py
src/reporters/: __init__.py  console_reporter.py  json_reporter.py  syslog_reporter.py  webhook_reporter.py
src/utils/: __init__.py  crypto_utils.py  sanitizers.py  system_utils.py  validators.py
templates/: Sentinel_Linux.service  linux-security-monitor.service
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_monitoring_pipeline.py
tests/security/: __init__.py  test_input_validation.py
tests/unit/: __init__.py  test_correlation_engine.py  test_exception_handling.py  test_sanitizers.py  test_threat_analyzer.py  test_validators.py
