[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-security-monitor"
version = "1.0.0"
description = "Enterprise-grade security monitoring framework for Linux systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Security Team", email = "security@example.com"}
]
maintainers = [
    {name = "Security Team", email = "security@example.com"}
]
keywords = [
    "security",
    "monitoring",
    "linux",
    "soc",
    "threat-detection",
    "incident-response",
    "siem",
    "mitre-attack"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]

dependencies = [
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "python-dateutil>=2.8.2",
    "psutil>=5.9.7",
    "watchdog>=3.0.0",
    "netifaces>=0.11.0",
    "cryptography>=41.0.7",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "python-json-logger>=2.0.7",
    "aiohttp>=3.9.1",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.2",
    "mypy>=1.8.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "bandit>=1.7.6",
    "safety>=2.3.5",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.8.19",
]
yara = [
    "yara-python>=4.3.1",
]
all = [
    "linux-security-monitor[dev,yara]",
]

[project.scripts]
lsm = "src.cli.main:main"
linux-security-monitor = "src.cli.main:main"
sentinel = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/linux-security-monitor"
Documentation = "https://github.com/yourusername/linux-security-monitor#readme"
Repository = "https://github.com/yourusername/linux-security-monitor.git"
Issues = "https://github.com/yourusername/linux-security-monitor/issues"
Changelog = "https://github.com/yourusername/linux-security-monitor/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "psutil.*",
    "netifaces.*",
    "watchdog.*",
    "yara.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "requires_root: marks tests that require root privileges",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # assert_used - we use asserts in tests

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
per-file-ignores = [
    "__init__.py:F401",
]



